<resources>
    <string name="app_name">Politikei</string>
    <string name="hello_blank_fragment">Projetos de Lei</string>

    <string name="app_id">921102801310369</string>

    <string name="loading_title">Validando</string>
    <string name="loading_msg">Verificando conta...</string>

    <string name="a_favor">A favor</string>
    <string name="ok">OK</string>
    <string name="contra">Contra</string>
    <string name="busca">Busca</string>
    <string name="nenhum_projeto">Nenhum Projeto</string>
    <string name="title_item_list">Items</string>
    <string name="title_item_detail">Item Detail</string>
    <string name="title_activity_activity_detalhe_projeto_lei">ActivityDetalheProjetoLei</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_activity_detail_project">ActivityDetailProject</string>
    <string name="pl_name">PL103/2015</string>
    <string name="status_tramitacao">Status da tramitação</string>
    <string name="status_tramitacao_value">Aguardando Presidente da Câmara</string>
    <string name="descricao_pl">fadslfjaldfk alfakkakakakakakakakakkkakakakakaka ak aka   kkakakak a kak ak akkaj aldfj alfj aljf alj fald fçal dfal jflaj flaçs fjalçd falç falç dflaj dflaj dflaj fdlaçd fla dfjaljdf aljdf ladjf ladjfladjfadslfjaldfk alfj aldfj alfj aljf alj fald fçal dfal jflaj flaçs fjalçd falç falç dflaj dflaj dflaj fdlaçd fla dfjaljdf aljdf ladjf ladjfladjfadslfjaldfk alfj aldfj alfj aljf alj fald fçal dfal jflaj flaçs fjalçd falç falç dflaj dflaj dflaj fdlaçd fla dfjaljdf aljdf ladjf ladjfladj123fadslfjaldfk alfj aldfj alfj aljf alj fald fçal dfal jflaj flaçs fjalçd falç falç dflaj dflaj dflaj fdlaçd fla dfjaljdf aljdf ladjf ladjfladjfadslfjaldfk alfj aldfj alfj aljf alj fald fçal dfal jflaj flaçs fjalçd falç falç dflaj dflaj dflaj fdlaçd fla dfjaljdf aljdf ladjf ladjfladjfadslfjaldfk alfj aldfj alfj aljf alj fald fçal dfal jflaj flaçs fjalçd falç falç dflaj dflaj dflaj fdlaçd fla dfjaljdf aljdf ladjf ladjfladj123</string>
    <string name="value_name_congressman">Chico Alencar</string>
    <string name="plenario">Plenario</string>
    <string name="lixo">Lixo</string>
    <string name="autenticando">autenticando</string>

    <string name="login_usuario_hint">Login</string>
    <string name="login_senha_hint">Senha</string>
    <string name="login_esqueceu_senha"><u>Esqueceu sua senha?</u></string>
    <string name="login_entrar">Entrar</string>
    <string name="login_registrar">Registrar</string>
    <string name="login_facebook">Entrar com facebook</string>
    <string name="login_error">Erro no login!\nVerifique seu login e tente novamente!</string>
    <string name="login_retrieve_error">Erro ao resetar Password!\nVerifique seu email e tente novamente!</string>
    <string name="login_retrieve_title">Resetar Password</string>
    <string name="login_retrieve_msg">Um email foi enviado!\nPor favor siga as instruções do email.</string>

    <string name="main_option1">Option1</string>
    <string name="main_option2">Option2</string>
    <string name="main_option3">Option3</string>
    <string name="main_option4">Option4</string>
</resources>
