<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="12dp"
    tools:context="politikei.com.br.politikei.FragmentProjetosLei">

    <TextView
        android:id="@+id/textViewTituloProjetoLei"
        android:textStyle="bold"
        android:textSize="16sp"
        android:layout_width="match_parent" android:layout_height="match_parent"
        android:text="@string/hello_blank_fragment" />


    <TextView
        android:id="@+id/textViewDescricaoProjetoLei"
        android:textSize="14sp"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:text="@string/hello_blank_fragment" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:focusable="false"
            android:text="@string/a_favor"/>

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:focusable="false"
            android:text="@string/contra"/>


    </LinearLayout>

</LinearLayout>
