<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:orientation="vertical"
    tools:showIn="@layout/activity_detail_project"
    tools:context="politikei.com.br.politikei.FragmentDetailProject">


    <LinearLayout
        android:id="@+id/layoutDetailPl"
        android:orientation="horizontal"
        android:layout_alignParentTop="true"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <LinearLayout
            android:orientation="vertical"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">

            <TextView
                android:id="@+id/textViewPlName"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="16dp"
                android:text=""
                android:textStyle="bold"/>

            <TextView
                android:id="@+id/textViewStatusPl"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="12dp"
                android:text="@string/status_tramitacao"/>

            <TextView
                android:id="@+id/textViewStatusPlValue"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="14dp"
                android:textStyle="bold"
                android:text=""/>

        </LinearLayout>

        <LinearLayout
            android:orientation="vertical"
            android:layout_margin="5dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">

            <ImageView
                android:layout_width="72dp"
                android:layout_height="96dp"
                android:src="@drawable/fotochicoalencar"/>

            <TextView
                android:text="@string/value_name_congressman"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />
        </LinearLayout>
    </LinearLayout>

    <ScrollView
        android:id="@+id/scrollViewDetail"
        android:layout_below="@id/layoutDetailPl"
        android:layout_above="@+id/layoutButtons"
        android:orientation="vertical"
        android:fillViewport="true"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <TextView
            android:id="@+id/textViewDescricaoProjetoLei"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:textSize="16sp"
            android:text=""
            android:scrollbars="vertical"
            />
    </ScrollView>


    <LinearLayout
        android:id="@id/layoutButtons"
        android:layout_alignParentBottom="true"
        android:orientation="vertical"
        android:gravity="bottom"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/a_favor"/>

            <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/contra"/>

            <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/plenario"/>


            <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/lixo"/>
        </LinearLayout>

    </LinearLayout>
</RelativeLayout>
