<FrameLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/light_grey">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:gravity="center">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:orientation="vertical"
            android:gravity="center">
            <ImageView
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:contentDescription="@string/app_name"
                android:paddingBottom="25dp"
                android:src="@drawable/logo"/>
            <EditText
                android:id="@+id/login_usuario"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:hint="@string/login_usuario_hint"
                android:textSize="18sp"
                android:inputType="text"
                android:imeOptions="actionNext"
                android:singleLine="true"
                android:padding="10dp"
                android:layout_marginLeft="20dp"
                android:layout_marginRight="20dp"
                android:text="murilo.wlima@gmail.com"
                android:background="@android:color/white"
                android:textColor="@android:color/black"/>
            <EditText
                android:id="@+id/login_senha"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:textSize="18sp"
                android:hint="@string/login_senha_hint"
                android:inputType="textPassword"
                android:imeOptions="actionDone"
                android:layout_marginTop="10dp"
                android:layout_marginLeft="20dp"
                android:layout_marginRight="20dp"
                android:padding="10dp"
                android:text="murilo"
                android:background="@android:color/white"
                android:textColor="@android:color/black"/>
            <TextView
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:gravity="right|end"
                android:textSize="14sp"
                android:layout_marginTop="20dp"
                android:layout_marginRight="20dp"
                android:layout_marginEnd="20dp"
                android:textColor="@color/dark_blue"
                android:text="@string/login_esqueceu_senha" />
            <Button
                android:id="@+id/login_entrar"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="25dp"
                android:textSize="15sp"
                android:layout_marginLeft="20dp"
                android:layout_marginRight="20dp"
                android:text="@string/login_entrar"
                android:background="@color/dark_blue"
                android:textColor="@android:color/white"/>
            <Button
                android:id="@+id/login_new_user"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:textSize="15sp"
                android:layout_marginLeft="20dp"
                android:layout_marginRight="20dp"
                android:text="@string/login_registrar"
                android:background="@color/dark_green"
                android:textColor="@android:color/white"/>
        </LinearLayout>
        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:background="@android:color/white"
            android:orientation="vertical"
            android:padding="10dp"
            android:gravity="bottom">
            <!--<com.facebook.login.widget.LoginButton-->
                <!--android:id="@+id/login_button"-->
                <!--android:layout_width="fill_parent"-->
                <!--android:layout_height="wrap_content"-->
                <!--android:layout_gravity="center_horizontal"-->
                <!--android:padding="10dp"-->
                <!--android:textSize="18sp"-->
                <!--android:layout_marginTop="10dp"-->
                <!--android:layout_marginBottom="10dp" />-->
        </LinearLayout>
    </LinearLayout>
</FrameLayout>

